@@ -29,7 +29,7 @@
 				</td>
 				<td class="entry_comment_content_box">
 					<p align="justify">
-						{{ comment.content }}
+						{{ comment.content|linebreaksbr }}
 					</p>
 				</td>
 			</tr>
