@@ -11,12 +11,13 @@
 			<div class="widget_on_left">
 				{% for link in category.links.all %}
 					{% if link.window %}
-						<a href="{{ link.url }}" title="{{ link.description }}" class="link" target="_blank">
+					<a href="{{ link.url }}" title="{{ link.description }}" class="link" target="_blank">
 					{% else %}
-						<a href="{{ link.url }}" title="{{ link.description }}" class="link">
+					<a href="{{ link.url }}" title="{{ link.description }}" class="link">
 					{% endif %}
 						&raquo; {{ link.title }}
 					</a>
+					<br>
 				{% endfor %}
 			</div>
 		</div>
